<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/pure_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/dialog_gold_grey"
        app:cardCornerRadius="@dimen/dialog_card_corner_radious"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dialog_header_img_size"
                app:cardBackgroundColor="@color/pure_white"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="100dp"
                android:layout_height="@dimen/dialog_header_img_size">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:src="@drawable/ic_unlock"
                    app:tint="@color/dialog_gold_grey" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/warning"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/unseal_question"
                    android:textColor="@color/pure_white"
                    android:textSize="@dimen/normal_heading_size" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:baselineAligned="false"
            android:visibility="gone"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/warning"
            android:textColor="@color/grey"
            android:textSize="@dimen/normal_heading_size" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/unseal_warning"
            android:textColor="@color/pure_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/unseal_card_continue"
            android:textColor="@color/pure_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/unseal_card_cancel"
            android:textColor="@color/pure_black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:weightSum="100">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="50"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="#CBC7C3"
                app:cardCornerRadius="@dimen/card_corner_radious">

                <TextView
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/pure_white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="50"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/dialog_red_grey"
                app:cardCornerRadius="@dimen/card_corner_radious">

                <TextView
                    android:id="@+id/unseal_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:text="@string/unseal_confirm"
                    android:textColor="@color/pure_white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>